--- a/README.html
+++ b/README.html
@@ -1,4 +1,4 @@
-<h1 id="normalize.scss-v1.0.0"><code>_normalize.scss</code> v1.0.0</h1>
+<h1 id="normalize.scss-v1.0.1"><code>_normalize.scss</code> v1.0.1</h1>
 <p><code>_normalize.scss</code> is a customisable SASS file that makes browsers render all elements more consistently and in line with modern standards--derived from Nicholas Gallagher's Normalize.css project. It is the result of researching the differences between default browser styles in order to precisely target only the styles that need normalizing.</p>
 <p><a href="http://darcmattr.github.com/normalize.css/1.0.0/test.html">Check out the demo</a></p>
 <h2 id="what-does-it-do">What does it do?</h2>
@@ -15,12 +15,13 @@
 <p>Normalize.css is intended to be used as an alternative to CSS resets.</p>
 <p>It's suggested that you read the <code>normalize.css</code> file and consider customising it to meet your needs. Alternatively, include the file in your project and override the defaults later in your CSS.</p>
 <h2 id="browser-support">Browser support</h2>
+<p>I am tracking the v1 series, because I want to keep some old browser support around, these old browsers include:</p>
 <ul>
 <li>Google Chrome</li>
-<li>Mozilla Firefox 3+</li>
-<li>Apple Safari 4+</li>
+<li>Mozilla Firefox 3+ (the Long-Term Support release of Firefox is based on v3)</li>
+<li>Apple Safari 4+ (because some people haven't upgraded their iOS version)</li>
 <li>Opera 10+</li>
-<li>Internet Explorer 6+</li>
+<li>Internet Explorer 6+ (better in here than in my main CSS files)</li>
 </ul>
 <h2 id="contribute">Contribute</h2>
 <p>Please contribute to the upstream project: Please read the <a href="https://github.com/necolas/issue-guidelines">issue guidelines</a>. Issue reports to me are welcome, but either address a matter of my personal taste or site standards, or ultimately rely on the work of the upstream maintainers. Only one of those is a &quot;public&quot; problem (hint, it's upstream).</p>
