--- a/README.html
+++ b/README.html
@@ -1,6 +1,6 @@
 <h1 id="normalize.scss-v1.0.1"><code>_normalize.scss</code> v1.0.1</h1>
 <p><code>_normalize.scss</code> is a customisable SASS file that makes browsers render all elements more consistently and in line with modern standards--derived from Nicholas Gallagher's Normalize.css project. It is the result of researching the differences between default browser styles in order to precisely target only the styles that need normalizing.</p>
-<p><a href="http://darcmattr.github.com/normalize.css/1.0.0/test.html">Check out the demo</a></p>
+<p><a href="http://darcmattr.github.com/_normalize.scss/test.html">Check out the demo</a></p>
 <h2 id="what-does-it-do">What does it do?</h2>
 <ul>
 <li>Preserves useful defaults, unlike many CSS resets.</li>
