--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Normalize CSS: UI tests</title>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<link rel="stylesheet" href="normalize.css">
+<link rel="stylesheet" href="style/normalize.css">
 <style>
   /*! suit-test v0.1.0 | MIT License | github.com/suitcss */
 
